--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
  </div>
 
  <ul class="topNav"> 
-  <li><a href="lorem">Features</a></li>
-  <li><a href="lorem">Team</a></li>
-  <li><a href="lorem">Sign In</a></li>
+  <li><a href="#">Features</a></li>
+  <li><a href="#">Team</a></li>
+  <li><a href="#">Sign In</a></li>
  </ul>
   
 </header>
@@ -43,7 +43,7 @@
       Fylo stores your most important files in one secure location. 
     Access them wherever you need, share and collaborate with friends, 
     family, and co-workers.
-    </p>>
+    </p>
   </div>
     
   <div>
@@ -140,22 +140,29 @@
   </div>  
 
   <ul>
-    <li>About Us</li>
-    <li>Jobs</li>
-    <li>Press</li>
-    <li>Blog</li>
+    <li><a href="#">About Us</a></li>
+    <li><a href="#">Jobs</a></li>
+    <li><a href="#">Press</a></li>
+    <li><a href="#">Blog</a></li>
   </ul>
 
   <ul>
-    <li>Contact Us</li>
-    <li>Terms</li>
-    <li>Privacy</li>
+    <li><a href="#">Contact Us</a></li>
+    <li><a href="#">Terms</a></li>
+    <li><a href="#">Privacy</a></li>
   </ul>
+
+  <div class="socialMediaIcons">
+    <img src="/images/facebook.png" alt="Facebook logo" href="https://www.flaticon.com/free-icons/facebook"Facebook icons created by Stockio - Flaticon>
+    <img src="/images/twitter.png" alt="Twitter logo" href="https://www.flaticon.com/free-icons/twitter" title="twitter icons"Twitter icons created by Stockio - Flaticon>
+    <img src="/images/instagram.png" alt="Instagram logo" href="https://www.flaticon.com/free-icons/instagram" title="instagram icons"Instagram icons created by Payungkead - Flaticon>
+  </div>
 </div>  
+
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://github.com/alexiavictoria">Alexia B.</a>.
     </p>
   </footer>
 </body>
