Top Navigation Bar
styling with CSS

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | Fylo landing page with two column layout</title>
 
@@ -20,8 +23,8 @@
 <!-- TOP NAVIGATION BAR -->
   
 <header>
-  <div class="topNavLogoImg">
-    <img src="/images/logo.svg" alt="Fylo Logo">
+  <div >
+    <img src="/images/logo.svg" alt="Fylo Logo" class="topNavLogoImg">
   </div>
 
   <ul class="topNav"> 
