--- a/index.html
+++ b/index.html
@@ -36,30 +36,31 @@
 </header>
 
 <!-- HERO PAGE -->
-<div class="heroPageLeft">
-  <div>
-    <h1>  All your files in one secure location, accessible anywhere.</h1>
+<div class="heroPage">
+  <div class="heroPageLeft">
+    <div>
+      <h1>  All your files in one secure location, accessible anywhere.</h1>
+    </div>
+
+    <div>
+      <p class="heroPageInfoText">
+        Fylo stores your most important files in one secure location. 
+      Access them wherever you need, share and collaborate with friends, 
+      family, and co-workers.
+      </p>
+    </div>
+      
+    <div>
+      <button>
+        Get Started
+      </button>
+    </div>
   </div>
 
-  <div>
-    <p class="heroPageInfoText">
-      Fylo stores your most important files in one secure location. 
-    Access them wherever you need, share and collaborate with friends, 
-    family, and co-workers.
-    </p>
-  </div>
-    
-  <div>
-    <button>
-      Get Started
-    </button>
+  <div class="heroPageRight">
+    <img class="heroImg" src="/images/illustration-1.svg" alt="cartoon people sorting out files in a large folder">
   </div>
 </div>
-
-<div class="heroPageRight">
-  <img src="/images/illustration-1.svg" alt="cartoon people sorting out files in a large folder">
-</div>
-
 
 <!-- INFORMATION PAGE -->
 <div class="infoPage">
