Hero Page Styling

--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
       </p>
     </div>
       
-    <div>
-      <button>
-        Get Started
-      </button>
+    <div class="heroPageButtonForm">
+      <form> 
+        <input type="text" id="heroTextBox" name="heroTextBox" placeholder="Enter your email...">
+      </form>
+      <button type="button">Get Started</button>
     </div>
   </div>
 
