starter for info page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <!-- TOP NAVIGATION BAR -->
   
-<header>
+<header class="wrapper">
   <div >
     <img src="/images/logo.svg" alt="Fylo Logo" class="topNavLogoImg">
   </div>
@@ -36,7 +36,7 @@
 </header>
 
 <!-- HERO PAGE -->
-<div class="heroPage">
+<div class="heroPage wrapper">
   <div class="heroPageLeft">
     <div>
       <h1>  All your files in one secure location, accessible anywhere.</h1>
@@ -64,8 +64,11 @@
 </div>
 
 <!-- INFORMATION PAGE -->
+<img class="bigCurve" src="/images/bg-curve-desktop.svg" alt="Big curve">
+
 <div class="infoPage">
-  <div class="infoPageLeft">
+
+  <div class="infoPageLeft wrapper">
 
     <div>
       <h2>
@@ -105,7 +108,7 @@
     
   </div>
 
-  <div class="infoPageLeft">
+  <div class="infoPageRight wrapper">
     <img src="/images/illustration-2.svg" alt="Three cartoon people with communicating through text message bubbles">
   </div>
 </div>
