--- a/index.html
+++ b/index.html
@@ -68,27 +68,26 @@
 
 <div class="infoPage">
 
-  <div class="infoPageLeft wrapper">
+  <div class="infoPageLeft">
+      <div>
+        <h2>
+        Stay productive, wherever you are
+        </h2>
+      </div>
 
-    <div>
-      <h2>
-      Stay productive, wherever you are
-      </h2>
-    </div>
+      <div>
+        <p>
+          Never let location be an issue when accessing your files. Fylo has you 
+        covered for all of your file storage needs.
 
-    <div>
-      <p>
-        Never let location be an issue when accessing your files. Fylo has you 
-      covered for all of your file storage needs.
+        Securely share files and folders with friends, family and colleagues for 
+        live collaboration. No email attachments required!
+        </p>
+      </div>
 
-      Securely share files and folders with friends, family and colleagues for 
-      live collaboration. No email attachments required!
-      </p>
-    </div>
-
-    <button>
-      See how Fylo works
-    </button>
+      <button>
+        See how Fylo works
+      </button>
       
     <div class="reviewCard">
       <p>
@@ -96,7 +95,7 @@
       making the switch our team has become a well-oiled collaboration machine.
       </p>
 
-      <img src="/images/avatar-testimonial.jpg">
+      <img  src="/images/avatar-testimonial.jpg">
 
       <p>
         Kyle Burton
@@ -108,8 +107,8 @@
     
   </div>
 
-  <div class="infoPageRight wrapper">
-    <img src="/images/illustration-2.svg" alt="Three cartoon people with communicating through text message bubbles">
+  <div class="infoPageRight">
+    <img class="infoImg" src="/images/illustration-2.svg" alt="Three cartoon people with communicating through text message bubbles">
   </div>
 </div>
 
